[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SystemMonitor"
version = "0.1.0"
description = "Lightweight system monitoring and alerting library for Python apps"
authors = [{ name = "Juan Mejia", email = "mejiajuan1503@hotmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "requests"
]

[project.optional-dependencies]
gpu = [
    "GPUtil"
]
email = [
    "secure-smtplib"
]

[project.urls]
Homepage = "https://github.com/JuanMejiaDev/SystemMonitor"
Issues = "https://github.com/JuanMejiaDev/SystemMonitor/issues"
